modificação na capa

--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -98,8 +98,8 @@ CURSO DE ENGENHARIA DE COMPUTAÇÃO
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA 1ª EXPERIÊNCIA\\
-INTRODUÇÃO AO LABORATÓRIO DE CONTROLE\\
+{\bf{\large RELATÓRIO DA 2ª EXPERIÊNCIA\\
+CONTROLE DE SISTEMAS DINÂMICOS: SISTEMA DE PRIMEIRA ORDEM\\
 }}
 \vspace{1.5cm}
 {\large TURMA: 01 A\\
@@ -148,7 +148,7 @@ MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering INTRODUÇÃO AO LABORATÓRIO DE CONTROLE\\}}}
+{\bf{\large {\centering CONTROLE DE SISTEMAS DINÂMICOS: SISTEMA DE PRIMEIRA ORDEM\\}}}
 
 \vspace{4cm}
 
@@ -156,7 +156,7 @@ MÁRCIO LUIZ BEZERRA LOPES JÚNIOR: 20160154326\\
 
 {\normalsize
 
-Primeiro Relatório Parcial apresentado à disciplina de
+Segundo Relatório apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
 avaliação da 1º unidade do semestre 2017.1 do 8º período
 do curso de Engenharia de Computação da
